force-app/main/default/objects/Order/fields/ARTL_Currency_ISO_Code__c.field-meta.xml
<CustomField>
    <fullName>ARTL_Currency_ISO_Code__c</fullName>
    <formula>IF(ISPICKVAL(CurrencyIsoCode , &apos;INR&apos;), &apos;Indian Rupees&apos; , &apos;Indian Rupees&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ARTL Currency ISO Code</label>
    <type>Text</type>
</CustomField>