force-app/main/default/objects/Order/fields/ARTL_Demo_Expiry_Date__c.field-meta.xml
<CustomField>
    <fullName>ARTL_Demo_Expiry_Date__c</fullName>
    <label>Demo Expiry Date</label>
    <type>Date</type>
</CustomField>