force-app/main/default/objects/Order/fields/ARTL_FutureDateRequestedReason__c.field-meta.xml
<CustomField>
    <fullName>ARTL_FutureDateRequestedReason__c</fullName>
    <label>Future Date Requested Reason</label>
    <length>50</length>
    <type>Text</type>
</CustomField>