force-app/main/default/objects/Order/fields/ARTL_Hansen_Order_Type__c.field-meta.xml
<CustomField>
    <fullName>ARTL_Hansen_Order_Type__c</fullName>
    <formula>IF( ISPICKVAL(vlocity_cmt__QuoteId__r.ARTL_Quote_Type__c,&quot;&quot;), &quot;New&quot;, 
 IF( ISPICKVAL(vlocity_cmt__QuoteId__r.ARTL_Quote_Type__c,&quot;Rebilling&quot;), &quot;Rebilling - Profile Update&quot;,IF( ISPICKVAL(vlocity_cmt__QuoteId__r.ARTL_Quote_Type__c,&quot;Demo&quot;), &quot;New&quot;, TEXT(vlocity_cmt__QuoteId__r.ARTL_Quote_Type__c)))
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Hansen Order Type</label>
    <type>Text</type>
</CustomField>