force-app/main/default/objects/Order/fields/ARTL_MO_Number__c.field-meta.xml
<CustomField>
    <fullName>ARTL_MO_Number__c</fullName>
    <formula>vlocity_cmt__ParentOrderId__r.OrderNumber</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>MO Number</label>
    <type>Text</type>
</CustomField>