force-app/main/default/objects/Order/fields/ARTL_OrderType__c.field-meta.xml
<CustomField>
    <fullName>ARTL_OrderType__c</fullName>
    <formula>IF(
ISPICKVAL(Type  , &quot;New&quot;),
&quot;New&quot;,
&quot;MACD&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ARTL_Order Type</label>
    <type>Text</type>
</CustomField>