force-app/main/default/objects/Order/fields/ARTL_Root_ProductCode__c.field-meta.xml
<CustomField>
    <fullName>ARTL_Root_ProductCode__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Root Product</label>
    <length>255</length>
    <type>Text</type>
</CustomField>