force-app/main/default/objects/Order/fields/ARTL_SOMOrder_Status__c.field-meta.xml
<CustomField>
    <fullName>ARTL_SOMOrder_Status__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>SOMOrder Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>