force-app/main/default/objects/Order/fields/ARTL_SOMOrderId__c.field-meta.xml
<CustomField>
    <fullName>ARTL_SOMOrderId__c</fullName>
    <label>SOMOrderId</label>
    <length>100</length>
    <type>Text</type>
</CustomField>