force-app/main/default/objects/Order/fields/ARTL_Transaction_SubType__c.field-meta.xml
<CustomField>
    <fullName>ARTL_Transaction_SubType__c</fullName>
    <label>Transaction SubType</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Clean Shifting</fullName>
            </value>
            <value>
                <fullName>Shifting</fullName>
            </value>
            <value>
                <fullName>Manageability Change</fullName>
            </value>
            <value>
                <fullName>Bandwidth Change</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>