force-app/main/default/objects/Order/fields/Billing_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Billing_Start_Date__c</fullName>
    <formula>ActivatedDate+5</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Billing Start Date</label>
    <type>Date</type>
</CustomField>