force-app/main/default/objects/Order/fields/DemoOrderRequestAccepted__c.field-meta.xml
<CustomField>
    <fullName>DemoOrderRequestAccepted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Demo Order Request Accepted</label>
    <type>Checkbox</type>
</CustomField>