force-app/main/default/objects/Order/fields/Downtime_End__c.field-meta.xml
<CustomField>
    <fullName>Downtime_End__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Downtime End</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>