force-app/main/default/objects/Order/fields/Downtime_Start__c.field-meta.xml
<CustomField>
    <fullName>Downtime_Start__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Downtime Start</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>