force-app/main/default/objects/Order/fields/Hansen_Order_Status__c.field-meta.xml
<CustomField>
    <fullName>Hansen_Order_Status__c</fullName>
    <label>Hansen Order Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>open.not_started.created</fullName>
            </value>
            <value>
                <fullName>open.running.in_progress</fullName>
            </value>
            <value>
                <fullName>open.running.cancelling</fullName>
            </value>
            <value>
                <fullName>open.assessing.in_progress</fullName>
            </value>
            <value>
                <fullName>open.assessing.error</fullName>
            </value>
            <value>
                <fullName>close.completed.cancelled</fullName>
            </value>
            <value>
                <fullName>open.running.error</fullName>
            </value>
            <value>
                <fullName>close.completed.done</fullName>
            </value>
            <value>
                <fullName>closed.aborted.aborted_by_server</fullName>
            </value>
            <value>
                <fullName>open.running.suspended</fullName>
            </value>
            <value>
                <fullName>force_closed.completed.done</fullName>
            </value>
            <value>
                <fullName>open.not_running.created</fullName>
                <default>true</default>
                <label>open.not_running.created</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>