force-app/main/default/objects/Order/fields/Is_NIPS__c.field-meta.xml
<CustomField>
    <fullName>Is_NIPS__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is NIPS</label>
    <type>Checkbox</type>
</CustomField>