force-app/main/default/objects/Order/fields/MRRNumber__c.field-meta.xml
<CustomField>
    <fullName>MRRNumber__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>MRR Number</label>
    <referenceTo>Material_Received_Request__c</referenceTo>
    <relationshipLabel>Orders</relationshipLabel>
    <relationshipName>Orders</relationshipName>
    <type>Lookup</type>
</CustomField>