force-app/main/default/objects/Order/fields/Order_with_ReliesOn__c.field-meta.xml
<CustomField>
    <fullName>Order_with_ReliesOn__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Order with ReliesOn relationship</description>
    <label>Linked Order</label>
    <referenceTo>Order</referenceTo>
    <relationshipLabel>Orders (Order)</relationshipLabel>
    <relationshipName>Orders</relationshipName>
    <type>Lookup</type>
</CustomField>