force-app/main/default/objects/Order/fields/PM_Name__c.field-meta.xml
<CustomField>
    <fullName>PM_Name__c</fullName>
    <formula>Quote.PM__r.FirstName + &apos; &apos; + Quote.PM__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PM Name</label>
    <type>Text</type>
</CustomField>