force-app/main/default/objects/Order/fields/PM_Phone__c.field-meta.xml
<CustomField>
    <fullName>PM_Phone__c</fullName>
    <formula>Quote.PM__r.MobilePhone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PM Phone</label>
    <type>Text</type>
</CustomField>