force-app/main/default/objects/Order/fields/PM_Team_Lead__c.field-meta.xml
<CustomField>
    <fullName>PM_Team_Lead__c</fullName>
    <formula>Quote.PM__r.Manager.FirstName + &apos; &apos; + Quote.PM__r.Manager.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PM Team Lead</label>
    <type>Text</type>
</CustomField>