force-app/main/default/objects/Order/fields/POId__c.field-meta.xml
<CustomField>
    <fullName>POId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PO Id</label>
    <referenceTo>Purchase_Order__c</referenceTo>
    <relationshipLabel>Orders</relationshipLabel>
    <relationshipName>Orders</relationshipName>
    <type>Lookup</type>
</CustomField>