force-app/main/default/objects/Order/fields/PRID__c.field-meta.xml
<CustomField>
    <fullName>PRID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PR Id</label>
    <referenceTo>ARTL_Purchase_Request__c</referenceTo>
    <relationshipLabel>Orders</relationshipLabel>
    <relationshipName>Orders</relationshipName>
    <type>Lookup</type>
</CustomField>